#2444 [Fixed] Viewer Grid: Dubbele scrollbar

--- a/packages/core/src/components/viewer-grid/viewer-grid.scss
+++ b/packages/core/src/components/viewer-grid/viewer-grid.scss
@@ -53,7 +53,7 @@ button {
 .dso-document-panel {
   .content {
     height: 100%;
-    padding: 0 css-grid.$grid-gutter-width * 0.5 units.$u1;
+    padding: 0 css-grid.$grid-gutter-width * 0.5;
   }
 }
 
